part1/exercise11/logpong-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logpong
  template:
    metadata:
      labels:
        app: logpong
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: logpong-claim
      containers:
        - name: logoutputdate
          image: mashiahoz/logoutputdate
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/logs
        - name: logoutputhash
          image: mashiahoz/logoutputhash
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/logs
        - name: pingpong
          image: mashiahoz/pingpong
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/logs
