part1/exercise11/pingpong-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: logpong 
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5001
